tests/Errors/Generic/Files/LineEndings/InvalidEOLChar.php
<?php

declare(strict_types=1);

echo 'This file has invalid EOL characters';
